# basecli

./: .gitignore  LIMITATIONS.md  README.md  pyproject.toml  setup.cfg  setup.py
src/basecli/: __init__.py  __main__.py  base.py  cli.py  engine.py  errors.py  evaluator.py  formatters.py  frontmatter.py  functions.py  lexer.py  parser.py  values.py  vault.py
tests/: conftest.py  test_base.py  test_determinism.py  test_duration_regression.py  test_functions.py  test_integration.py  test_library_fixture.py  test_vault.py  test_view_types.py
tests/fixtures/vault/: tasks.base
tests/fixtures/vault/notes/: meeting-notes.md
tests/fixtures/vault/tasks/: call-dentist.md  close-stale-issues.md  deploy-release-v2.md  learn-rust.md  migrate-legacy-database.md  organize-garage.md  plan-q4-roadmap.md  project-overview.md  read-design-patterns-book.md  renew-ssl-certificate.md  review-pull-requests.md  submit-expense-report.md  water-the-plants.md  write-blog-post.md
tests/fixtures/vault/tasks/archive/: buy-birthday-gift.md  old-sprint-cleanup.md  refactor-auth-module.md
