[metadata]
name = basecli
version = 0.1.0
description = Headless renderer for Obsidian Bases (.base) files — reimplements the Bases engine so agents can read .base reports without opening Obsidian.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    PyYAML>=6.0
    python-dateutil>=2.8

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest>=7.0

[options.entry_points]
console_scripts =
    basecli = basecli.cli:main
